partners added to ttm

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -283,7 +283,7 @@
   }
 }
 
-.pitches_wrapper, #comments_feed {
+.pitches_wrapper, #comments_feed, #sharing_with_partners {
   h3 {
     margin-bottom: 10px;
   }
