--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -66,8 +66,7 @@
       </div>
     </div>
 
-    <% @full = @user.first_name + " " + @user.last_name %>
-    <%= f.hidden_field :full_name, :value => @full %>
+    <%= f.hidden_field :full_name, :value => @user.full_name %>
     <%= f.hidden_field :posts_count, :value => @user.posts.published.count %>
 
     <% if current_user && current_user.admin? %>
