--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -14,6 +14,9 @@
     <%= stylesheet_link_tag 'mdbootstrap/css/style.css' %>
     <%= stylesheet_link_tag 'onboarding', media: 'all' %>
     <%= javascript_include_tag 'application'%>
+    <% if current_user.partner %>
+      <meta name="partner" content="Turn off ads">
+    <% end %>
   </head>
   <body>
     <% if notice %>
@@ -87,6 +90,9 @@
                             <%= link_to "Writers", users_path, class: "dropdown-item" %>
                           <% else %>
                             <%= link_to "Review Onboarding", onboarding_path(:page => "welcome"), class: "dropdown-item" %>
+                          <% end %>
+                          <% if current_user.admin? %>
+                            <%= link_to "Partners", "/partners", class: "dropdown-item" %>
                           <% end %>
                           <%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item" %>
                           <%= link_to "Change Password", edit_user_registration_path, class: "dropdown-item" %>
