--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -4,12 +4,12 @@
     <br>
   <h4><i>A special thanks to this month's magazine issue writers and designers:</i></h4>
   <span>
-    <%= link_to("Malak Yousry - Creative Director", "https://theteenmagazine.com/users/malak-yousry", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Khushi Gupta - Creative Director", "https://theteenmagazine.com/users/khushi-gupta", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Jane Park - Visual Designer", "https://theteenmagazine.com/users/jane-park", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Jessica Zhu - Visual Designer", "https://theteenmagazine.com/users/jessica-zhu", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Jennifer Xia - Visual Designer", "https://theteenmagazine.com/users/jennifer-xia", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Nameeda Elmi - Visual Designer", "https://theteenmagazine.com/users/nameeda-elmi", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Malak Yousry - Creative Director", "https://theteenmagazine.com/writers/malak-yousry", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Khushi Gupta - Creative Director", "https://theteenmagazine.com/writers/khushi-gupta", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Jane Park - Visual Designer", "https://theteenmagazine.com/writers/jane-park", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Jessica Zhu - Visual Designer", "https://theteenmagazine.com/writers/jessica-zhu", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Jennifer Xia - Visual Designer", "https://theteenmagazine.com/writers/jennifer-xia", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Nameeda Elmi - Visual Designer", "https://theteenmagazine.com/writers/nameeda-elmi", :target => "_blank", :class => "link_nrml") %>,
     <%= link_to("Lishmello - Image Editor", "https://www.instagram.com/lishmello", :target => "_blank", :class => "link_nrml") %>
   </span>
   <br>
