--- a/app/views/users/share.html.erb
+++ b/app/views/users/share.html.erb
@@ -1,4 +1,4 @@
-<div class="category">
+<div class="category mb-4">
   <div class="category--show">
    <div class="other--articles">
      <div class="flex">
