--- a/app/views/comments/_comment_following.html.erb
+++ b/app/views/comments/_comment_following.html.erb
@@ -1,8 +1,8 @@
 <li class="list-group-item comment" id="comment_<%=comment.id %>">
-  <% @profile_img = comment.user.profile.exists? ? image_tag(comment.user.profile.url(:square), :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
+  <% @profile_img = comment.user.try(:profile)&.exists? ? image_tag(comment.user.profile.url(:square), :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
   <div class="li-content" style="width: 100%;">
     <%= link_to(@profile_img, comment.user) %>
-    <span><%= link_to comment.user.full_name, comment.user, class: "link_nrml" %> also replied to <%= Comment.find(comment.comment_id).user.try(:full_name) %>'s comment <%= time_ago_in_words(comment.created_at) %> ago:
+    <span><%= link_to comment.user.try(:full_name), comment.user, class: "link_nrml" %> also replied to <%= Comment.find(comment.comment_id).user.try(:full_name) %>'s comment <%= time_ago_in_words(comment.created_at) %> ago:
     <span class="date_ago"><%= comment.text.truncate_words(12) %></span></span>
   </div>
   <div class="li-link-wrapper">
