--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -51,7 +51,7 @@
                   <% if user_signed_in? %>
                      <% if current_user.editor? %>
                         <%= link_to "Start an Article", new_post_path, class: "pt-4" %>
-                     <% else %>
+                     <% elsif !current_user.partner %>
                         <%= link_to "Pitch an Article", new_pitch_path, class: "pt-4" %>
                      <% end %>
                      <div class="dropdown">
@@ -60,7 +60,9 @@
                           aria-haspopup="true" aria-expanded="false"><span><i class="fa fa-bars"></i><%= @profile_img %><% if !(@notifications.eql? 0) %><span class="counter counter-sm" <% if @notifications < 10 %> style="padding: 2px 4px !important;" <% end %>><%= @notifications %></span><% end %></span></a>
                         <div class="dropdown-menu">
                           <%= link_to "My Profile", user_path(current_user), class: "dropdown-item" %>
-                          <div class="dropdown-divider"></div>
+                          <% if !current_user.partner? %>
+                            <div class="dropdown-divider"></div>
+                          <% end %>
                           <% if current_user.editor? %>
                              <a href="/reviews" class="dropdown-item">Editor Dashboard
                                <% if @unseen_editor_dashboard_cnt > 0 %>
@@ -68,16 +70,18 @@
                                <% end %>
                              </a>
                           <% end %>
-                          <a href="/pitches" class="dropdown-item">Unclaimed Pitches
-                            <% if @unseen_pitches_cnt > 0 %>
-                              <span class="sec counter counter-sm"></span><p><%= @unseen_pitches_cnt %> new</p>
-                            <% end %>
-                          </a>
-                          <a href="/community" class="dropdown-item">Community
-                            <% if @unseen_shared_drafts_cnt > 0 %>
-                              <span class="sec counter counter-sm"></span><p><%= @unseen_shared_drafts_cnt %> new</p>
-                            <% end %>
-                          </a>
+                          <% if !current_user.partner? %>
+                            <a href="/pitches" class="dropdown-item">Unclaimed Pitches
+                              <% if @unseen_pitches_cnt > 0 %>
+                                <span class="sec counter counter-sm"></span><p><%= @unseen_pitches_cnt %> new</p>
+                              <% end %>
+                            </a>
+                            <a href="/community" class="dropdown-item">Community
+                              <% if @unseen_shared_drafts_cnt > 0 %>
+                                <span class="sec counter counter-sm"></span><p><%= @unseen_shared_drafts_cnt %> new</p>
+                              <% end %>
+                            </a>
+                          <% end %>
                           <% if current_user.admin? %>
                             <a href="/applies" class="dropdown-item">Writer Applications
                               <% if @unseen_applications_cnt > 0 %>
@@ -88,16 +92,19 @@
                           <div class="dropdown-divider"></div>
                           <% if current_user.editor? %>
                             <%= link_to "Writers", users_path, class: "dropdown-item" %>
-                          <% else %>
+                          <% elsif !current_user.partner? %>
                             <%= link_to "Review Onboarding", onboarding_path(:page => "welcome"), class: "dropdown-item" %>
                           <% end %>
                           <% if current_user.admin? %>
                             <%= link_to "Partners", "/partners", class: "dropdown-item" %>
                           <% end %>
-                          <%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item" %>
+                          <% @edit_path = current_user.partner ? "/partners/#{current_user.slug}/edit" : edit_user_path(current_user) %>
+                          <%= link_to "Edit Profile", @edit_path, class: "dropdown-item" %>
                           <%= link_to "Change Password", edit_user_registration_path, class: "dropdown-item" %>
                           <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" target="_blank" href="https://www.facebook.com/groups/615063885673363">Writer Facebook Group <i class="fa fa-external-link"></i></a>
+                          <% if !current_user.partner? %>
+                            <a class="dropdown-item" target="_blank" href="https://www.facebook.com/groups/615063885673363">Writer Facebook Group <i class="fa fa-external-link"></i></a>
+                          <% end %>
                           <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
                         </div>
                     </div>
