--- a/app/views/posts/partials/_partner_comments.html.erb
+++ b/app/views/posts/partials/_partner_comments.html.erb
@@ -1,10 +1,6 @@
-<h3 class="title mb-2">This draft was shared with <%= link_to(partner.try(:full_name), partner) %></h3>
-<i>While we keep all opinions our own, we encourage you to give feedback on this article and let us know how we're doing.
-   To give specific feedback, highlight and comment by text, or write a more general comment below.</i>
+<h3 class="title mb-2"><%= link_to(partner.try(:full_name), partner) %> was added as a partner</h3>
+<i><%= post.user.full_name %> is working on this article. To give feedback, highlight specific text to comment on, or write more general notes below.</i>
 <div class="comments">
-  <% if !(post.reviews.last.try(:status).eql? "In Progress") %>
-    <i class="d-block mt-3 mb-3">Social sharing in the <%= link_to("writer community", "/community") %> has been paused while your article's status is <b><%= post.reviews.last.try(:status) %></b>.</i>
-  <% end %>
   <%= render :partial => 'comments/comment_form', locals: {post: post, comment: comment } %>
   <ul class="list-group list-group-flush" id="list-group-comments">
     <% if (comments.count.eql? 0) && (post.reviews.last.try(:status).eql? "In Progress") %>
