--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -25,7 +25,7 @@
         <div class="card card-review <% if @unseen_posts.include? draft %> unread <% end %>" style="width: 100%;">
           <h4 class="card-title"><%= link_to draft.title, draft %></h4>
           <div class="card-bottom-flex">
-            <% if draft.user.profile.exists? %>
+            <% if draft.user.try(:profile)&.exists? %>
               <%= image_tag draft.user.profile.url(:square), :class => "profile_img", :id => "review_img" %>
             <% else %>
               <%= image_tag "profile_image.jpg", :class => "profile_img", :id => "review_img" %>
@@ -34,7 +34,7 @@
               <% if !draft.pitch.blank? %>
                 <p class="card-text"> <%= draft.pitch.description.truncate_words(20) %></p>
               <% end %>
-              <p class="card-text"> Submitted by <%= link_to draft.user.full_name, draft.user %> on <%= draft.reviews.last.updated_at.strftime("%A, %b %d") %> </p>
+              <p class="card-text"> Submitted by <%= link_to draft.user.try(:full_name), draft.user %> on <%= draft.reviews.last.updated_at.strftime("%A, %b %d") %> </p>
             </div>
             <%= link_to "Claim Review", edit_post_path(draft), :class => "btn btn-primary btn-review", :id => "btn_pink" %>
           </div>
@@ -50,14 +50,14 @@
       <div class="card card-review <% if @unseen_submitted_pitches.include? pitch %> unread <% end %>" style="width: 100%;">
           <h4 class="card-title"><%= link_to pitch.title, pitch %></h4>
           <div class="card-bottom-flex">
-            <% if pitch.user.profile.exists? %>
+            <% if pitch.user.try(:profile)&.exists? %>
               <%= image_tag pitch.user.profile.url(:square), :class => "profile_img", :id => "review_img" %>
             <% else %>
               <%= image_tag "profile_image.jpg", :class => "profile_img", :id => "review_img" %>
             <% end %>
             <div>
               <p class="card-text"> <%= pitch.description.truncate_words(20) %></p>
-              <p class="card-text"> Submitted by <%= link_to pitch.user.full_name, pitch.user %> on <%= pitch.updated_at.strftime("%A, %b %d") %> </p>
+              <p class="card-text"> Submitted by <%= link_to pitch.user.try(:full_name), pitch.user %> on <%= pitch.updated_at.strftime("%A, %b %d") %> </p>
             </div>
             <%= link_to "View Pitch", edit_pitch_path(pitch), :class => "btn btn-primary btn-review", :id => "btn_pink" %>
           </div>
