--- a/app/views/users/sponsored.html.erb
+++ b/app/views/users/sponsored.html.erb
@@ -4,7 +4,7 @@
      <div class="other--articles">
        <div class="flex">
          <div class="container">
-           <h2 class="mb-4">Published articles: <%= link_to(@partner.full_name, @partner) %>x The Teen Magazine</h2>
+           <h2 class="mb-4">Published articles: <%= link_to(@partner.full_name, @partner) %> x The Teen Magazine</h2>
            <% @published.each do |post| %>
              <div class="thumbnail">
                <div class="container--image">
@@ -16,6 +16,9 @@
                  <p class="date_post_preview"><%= post.publish_at.strftime("%A, %b %d")%></p>
                </div>
              </div>
+           <% end %>
+           <% if @published.count.eql? 0 %>
+            <i class="d-block mb-4">None of your articles with The Teen Magazine have been published yet.</i>
            <% end %>
          </div>
          <a class="apply" href="/apply" target="blank">
