--- a/app/views/users/share.html.erb
+++ b/app/views/users/share.html.erb
@@ -19,10 +19,14 @@
                <% @posts.each do |draft| %>
                  <div class="card" style="width: 32%;">
                    <a href="<%= post_path(draft)%>">
-                     <%= image_tag(draft.thumbnail.url(:large2), :class => "card-img-top") %>
+                     <% if draft.thumbnail.exists? %>
+                      <%= image_tag(draft.thumbnail.url(:large2), :class => "card-img-top") %>
+                    <% else %>
+                      <%= image_tag("thumbnail.png", :class => "card-img-top") %>
+                    <% end %>
                    </a>
                    <div class="card-body">
-                     <p class="card-text">Sharing has been turned on for your draft <%= link_to(draft.title, draft) %>.</p>
+                     <p class="card-text"><%= link_to(draft.title, draft) %></p>
                    </div>
                    <% if draft.promoting_until.present? && draft.promoting_until > Time.now %>
                      <div class="rounded-bottom rgba-red-strong lighten-3 text-right p-3">
