subscribe to mailchimp on acceptance

--- a/app/views/application_mailer/send_pitches.html.erb
+++ b/app/views/application_mailer/send_pitches.html.erb
@@ -809,11 +809,11 @@ You are receiving this email because you subscribed to The Teen Magazine's newsl
 <strong>Our mailing address is:</strong>
 <br>
 The Teen Magazine<br>
-944 Danbeck Avenue<br>
-Santa Rosa, California 95404
+1 Waterhouse Street<br>
+Cambridge, Massachusetts 02138
 <br>
 <br>
-You can turn off all email notifications from The Teen Magazine by checking "Turn off all email notifications" on your edit profile page.
+<small>Unsubscribe to The Teen Magazine Writer newsletter <a href="https://theteenmagazine.us14.list-manage.com/unsubscribe?u=5c2a24e15a906f29e2c6a9b72&id=363afe9160" style="color: white;">here</a>.</small>
 <br>
 <br>
                     </td>
