--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -92,7 +92,7 @@
         <%= rv.select :status, options_for_select(@statuses, @review.try(:status)) %>
         <% if current_user.admin %>
           <div style="float:right;">
-            <%= f.label "Feautured:" %>
+            <%= f.label "Featured:" %>
             <%= f.check_box :featured %>
           </div>
         <% end %>
