--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -76,6 +76,8 @@ blockquote {
                   <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %>
                   <% end %>
                 </div>
+              <% else %>
+                <p class="mt-0 mb-4"><i>Thank you for reading The Teen Magazine! If you are intersted in joining our writer community, you can apply on our website <a target="_blank" class="link_grn" href="/apply">here</a>.</i></p>
               <% end %>
               <div id= "background">
                <%= render :partial => 'users/profile', locals: {user: @user} %>
