--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -9,23 +9,17 @@
 
   <body>
     <p>Hi <%= @user.first_name %>,</p>
-    <p>Congratulations!</p>
-    <p>We really connected with your cover letter and think you are a great fit with our team of writers.</p>
-    <p>Being a writer for The Teen Magazine offers the experience and mentorship necessary to launch your journalism career.
-      You will receive feedback on submitted articles, build your journalism resume, and network with our amazing community
+    <p><b>Congratulations!</b> We really connected with your cover letter and think you are a great fit with our team of writers.</p>
+    <p>As a writer for The Teen Magazine, you will receive feedback on submitted articles, build your journalism resume, and network with our amazing community
       of journalists. We are so excited to welcome you to our talented team of writers, and we can't wait
       to work with you to create your first article!</p>
     <p>Your next steps:</p>
     <ol>
-      <li>Join the Facebook group found <%= link_to "here","https://www.facebook.com/groups/615063885673363/" %></li>
-      <li>Log into your new account! Your username is <b style="color: blue;"><%= @user.email %></b> and your password is <b style="color: blue;"><%= @user.password %></b>. 
-        You can change your password at <%= link_to "https://www.theteenmagazine.com/users/edit", "https://www.theteenmagazine.com/users/edit" %> 
-        and you can log into your account at <%= link_to "https://www.theteenmagazine.com/login", "https://www.theteenmagazine.com/login" %>.</li>
+      <li>Join the Facebook group found <%= link_to "here","https://www.facebook.com/groups/615063885673363/" %> and write a short post introducing yourself. Check this group often as this is the number one way to connect with other writers from The Teen Magazine.</li>
+      <li>Log into your new account <%= link_to "here", "https://www.theteenmagazine.com/login" %>. Your username is <b style="color: blue;"><%= @user.email %></b> and your temporary password is <b style="color: blue;"><%= @user.password %></b>. 
+        The onboarding process will walk you through setting up your profile and starting your first article.</li>
     </ol>
-    <p>Once you've been accepted into the Facebook group, please write a short post introducing yourself. Please check back on this group often as this is the number one way to connect with other writers from The Teen Magazine.</p>
-    <p>When you're ready to start your first article, go to your Dashboard and click on “Pitch an Article”. Before submitting
-      an article for approval, please read the instructions on “Writing the perfect article” found on your dashboard.</p>
-    <p>Please let us know if you have any questions! We look forward to reading your first submitted article!</p>
-    <p>Best Regards,<br/>Editor Team</p>
+    <p>We look forward to reading your first submission and welcoming you to our writer community! If you have any questions, please reply to this email or reach out to me directly at mia@theteenmagazine.com any time.</p>
+    <p>Best Regards,<br>Mia Johansson</p><p>The Teen Magazine</p>
   </body>
 </html>
