--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -6,6 +6,10 @@ blockquote {
   margin: 1em 0;
   font-style: italic;
 }
+.twitter-tweet {
+  margin: 0 auto;
+  display: block;
+}
 </style>
 
 <div class="div">
