--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -28,9 +28,9 @@
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
-        <!-- <div class="banner_stts_relative">
-          <p class= "banner_stts" style="background-color: #FF78CB;">The Teen Magazine's September 2020 issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
-        </div> -->
+        <div class="banner_stts_relative">
+          <p class= "banner_stts" style="background-color: #EF265F;">The Teen Magazine is launching the #TTMVoices on Climate Change initiative. Find out more <a target="_blank" class="link_white" href="/categories/ttmvoices">here</a>.</p>
+        </div>
         <div class="bodywrapper">
           <header id="main_navigation" class="clearfix">
             <div id="banner">
