--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
       fbq('init', '2099586743677741');
       fbq('track', 'PageView');
     </script>
+    <link href="https://fonts.googleapis.com/css2?family=Griffy&display=swap" rel="stylesheet">
     <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=2099586743677741&ev=PageView&noscript=1"
     /></noscript>
@@ -45,7 +46,7 @@
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
         <div class="banner_stts_relative">
-          <p class= "banner_stts" style="background-color: #EF265F;">The Teen Magazine is launching the #TTMVoices on Climate Change initiative. Find out more <a target="_blank" class="link_white" href="/categories/ttmvoices">here</a>.</p>
+          <p class= "banner_stts" style="background-color: black;"><span style="font-family: 'Griffy', cursive;">All Treats, No Tricks: </span> Get in the <span style="font-family: 'Griffy', cursive;">Spirit of Halloween</span> <i class="fas fa-ghost"></i> by grabbing your FREE copy of The Teen Magazine's October issue <a target="_blank" class="link_white" href="/subscribe">here</a>!</p>
         </div>
         <div class="bodywrapper">
           <header id="main_navigation" class="clearfix">
