--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -29,7 +29,7 @@
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
         <div class="banner_stts_relative">
-          <p class= "banner_stts" style="background-color: #EF265F;">The Teen Magazine is launching the #TTMVoices on Climate Change initiative. Find out more <a target="_blank" class="link_white" href="/categories/ttmvoices">here</a>.</p>
+          <p class= "banner_stts" style="background-color: black;">It's SpOOkY sEaSOn! The Teen Magazine has just released a special October magazine issue. Get your FREE copy here.</p>
         </div>
         <div class="bodywrapper">
           <header id="main_navigation" class="clearfix">
