--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -17,6 +17,7 @@
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
+    <link href="https://fonts.googleapis.com/css2?family=Griffy&display=swap" rel="stylesheet">
   </head>
   <body>
     <% if notice %>
@@ -29,7 +30,7 @@
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
         <div class="banner_stts_relative">
-          <p class= "banner_stts" style="background-color: black;">It's SpOOkY sEaSOn! The Teen Magazine has just released a special October magazine issue. Get your FREE copy here.</p>
+          <p class= "banner_stts" style="background-color: black;"><span style="font-family: 'Griffy', cursive;">All Treats, No Tricks: </span> Get in the <span style="font-family: 'Griffy', cursive;">Spirit of Halloween</span> <i class="fas fa-ghost"></i> by grabbing your FREE copy of The Teen Magazine's October issue <a target="_blank" class="link_white" href="/subscribe">here</a>!</p>
         </div>
         <div class="bodywrapper">
           <header id="main_navigation" class="clearfix">
